--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
   <title>FriendSHIP</title>
@@ -15,6 +15,31 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="format-detection" content="telephone=no" />
+
+  <meta name="apple-itunes-app" content="app-id=868076805">
+
+  <meta property="og:title" content="2048"/>
+  <meta property="og:site_name" content="2048"/>
+  <meta property="og:description" content="Join the numbers and get to the SECRET tile! Careful: this game is extremely addictive!"/>
+  <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
+
+  <meta name="twitter:card" content="app" />
+  <meta name="twitter:site" content="@gabrielecirulli" />
+  <meta name="twitter:title" content="2048" />
+  <meta name="twitter:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!" />
+  <meta name="twitter:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png" />
+  <meta name="twitter:url" content="http://gabrielecirulli.github.io/2048/" />
+  <meta name="twitter:app:country" content="US">
+  <meta name="twitter:app:name:iphone" content="2048">
+  <meta name="twitter:app:id:iphone" content="868076805">
+  <meta name="twitter:app:url:iphone" content="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805">
+  <meta name="twitter:app:name:ipad" content="2048">
+  <meta name="twitter:app:id:ipad" content="868076805">
+  <meta name="twitter:app:url:ipad" content="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805">
+  <meta name="twitter:app:name:googleplay" content="2048">
+  <meta name="twitter:app:id:googleplay" content="com.gabrielecirulli.app2048">
+  <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=com.gabrielecirulli.app2048">
 </head>
 <body>
   <div class="container">
@@ -27,8 +52,13 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers or the faces and get to the <strong>SECRET tile!</strong></p>
+      <p class="game-intro">Join the numbers and the faces and get to the <strong>SECRET tile!</strong></p>
       <a class="restart-button">New Game</a>
+    </div>
+
+    <div class="app-notice">
+      <span class="notice-close-button">x</span>
+      <p><strong class="important">New:</strong> Get the new 2048 app for <a href="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805" target="_blank">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.gabrielecirulli.app2048" target="_blank">Android!</a></p>
     </div>
 
     <div class="game-container">
@@ -37,6 +67,22 @@
         <div class="lower">
 	        <a class="keep-playing-button">Keep going</a>
           <a class="retry-button">Try again</a>
+          <div class="score-sharing"></div>
+          <div class="mailing-list">
+            <!-- MailChimp Signup Form -->
+            <form action="http://gabrielecirulli.us8.list-manage.com/subscribe/post?u=991201206817cfb4e4247ed6c&amp;id=7928ea817b" method="post" name="mc-embedded-subscribe-form" class="mailing-list-form" target="_blank">
+              <strong>Get email updates from Gabriele</strong>
+
+              <input type="email" value="" name="EMAIL" class="mailing-list-email-field" placeholder="Your email address" spellcheck="false">
+
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -9999px;">
+                <input type="text" name="b_991201206817cfb4e4247ed6c_7928ea817b" value="">
+              </div>
+
+              <input type="submit" value="Go" name="subscribe" class="mailing-list-subscribe-button">
+            </form>
+          </div>
         </div>
       </div>
 
@@ -77,12 +123,24 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of FriendSHIP. </a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> The game is the original version of FriendSHIP. Other versions are derivatives or fakes, and should be used with caution.
     </p>
     <hr>
     <p>
     Created by <a href="https://www.facebook.com/bubblerosy">Rosy Chen.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
+    
+
+      <form class="pp-donate" action="https://www.paypal.me/RosyChen/5" method="post" target="_blank">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="NVNPJLTBZ8AME">
+        <button name="submit"><img src="meta/icon_pp.svg">Donate</button>
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+      </form>
+
+     
+
+    </div>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
@@ -95,5 +153,15 @@
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,"script","//www.google-analytics.com/analytics.js","ga");
+
+    ga("create", "UA-42620757-2", "gabrielecirulli.github.io");
+    ga("send", "pageview");
+  </script>
 </body>
 </html>
